--- a/prawo.html
+++ b/prawo.html
@@ -1,146 +1,159 @@
 <!DOCTYPE html>
-
 <html lang="pl">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Danziger Chronograf – Tytuł Artykułu</title>
-<meta content="Opis artykułu na stronie sekcji." name="description"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
-<link href="css/theme.css" rel="stylesheet" type="text/css"/>
-<link href="css/section.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-<header>
-<button id="menu-toggle">☰</button>
-<button id="search-toggle">
-<svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-<path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-</svg>
-</button> <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
-</header>
-<nav class="main-nav">
-<ul>
-<li><a href="stand.html" style="">STANDPUNKT</a>
-</li>
-<li><a href="prawo.html" style="">PRAWO</a>
-</li>
-<li><a href="lokalnie.html" style="">LOKALNIE</a>
-</li>
-<li><a href="dobrze.html" style="">DOBRZE NA DZIŚ</a>
-</li>
-<li><a href="notpl.html" style="">OBYWATELE NIE PL</a>
-</li>
-<li><a href="kartka.html" style="">KARTKA Z HISTORII</a>
-</li>
-<li><a href="de/chronograf.html" style="">DANZIGER CHRONOGRAF</a>
-</li>
-</ul>
-</nav>
-<div id="menu-overlay"></div>
-<div id="offcanvas-menu">
-<ul>
-<li><a href="stand.html">STANDPUNKT</a>
-</li>
-<li><a href="prawo.html">PRAWO</a>
-</li>
-<li><a href="lokalnie.html">LOKALNIE</a>
-</li>
-<li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
-</li>
-<li><a href="notpl.html">OBYWATELE NIE PL</a>
-</li>
-<li><a href="kartka.html">KARTKA Z HISTORII</a>
-</li>
-<li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
-</li>
-</ul>
-</div>
-<div class="mobile-top-gadgets-container">
-<iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+    <head>
+        <meta charset="utf-8"/>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+        <title>Danziger Chronograf – Tytuł Artykułu</title>
+        <meta content="Opis artykułu na stronie sekcji." name="description"/>
+        <link href="https://fonts.googleapis.com" rel="preconnect"/>
+        <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;display=swap" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
+        <link href="css/theme.css" rel="stylesheet" type="text/css"/>
+        <link href="css/section.css" rel="stylesheet" type="text/css"/>
+    </head>
+    <body>
+        <header>
+            <button id="menu-toggle">☰</button>
+            <button id="search-toggle">
+                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                </svg>
+            </button>             <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
+        </header>
+        <nav class="main-nav">
+            <ul>
+                <li>
+                    <a href="stand.html" style="">STANDPUNKT</a>
+                </li>
+                <li>
+                    <a href="prawo.html" style="">PRAWO</a>
+                </li>
+                <li>
+                    <a href="lokalnie.html" style="">LOKALNIE</a>
+                </li>
+                <li>
+                    <a href="dobrze.html" style="">DOBRZE NA DZIŚ</a>
+                </li>
+                <li>
+                    <a href="notpl.html" style="">OBYWATELE NIE PL</a>
+                </li>
+                <li>
+                    <a href="kartka.html" style="">KARTKA Z HISTORII</a>
+                </li>
+                <li>
+                    <a href="de/chronograf.html" style="">DANZIGER CHRONOGRAF</a>
+                </li>
+            </ul>
+        </nav>
+        <div id="menu-overlay"></div>
+        <div id="offcanvas-menu">
+            <ul>
+                <li>
+                    <a href="stand.html">STANDPUNKT</a>
+                </li>
+                <li>
+                    <a href="prawo.html">PRAWO</a>
+                </li>
+                <li>
+                    <a href="lokalnie.html">LOKALNIE</a>
+                </li>
+                <li>
+                    <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                </li>
+                <li>
+                    <a href="notpl.html">OBYWATELE NIE PL</a>
+                </li>
+                <li>
+                    <a href="kartka.html">KARTKA Z HISTORII</a>
+                </li>
+                <li>
+                    <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                </li>
+            </ul>
+        </div>
+        <div class="mobile-top-gadgets-container">
+            <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
 </iframe>
-<iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+            <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
 </iframe>
+        </div>
+        <div class="main-layout-wrapper">
+            <div class="main-content">
+                <div class="ads google article-top-ad">
 </div>
-<div class="main-layout-wrapper">
-<div class="main-content">
-<div class="ads google article-top-ad">
-</div>
-<h1 class="article-title" style="">Bruderferajna Wileńska – Gdyńskie NGO 'O'. Kazus prawno-historyczny</h1>
-<p class="lead" style="">Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP</p>
-<p class="author-date">Michael Marmanidi | Data publikacji: 26 lipca 2025</p>
-<img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/QtFL7yXn/bruderferan-online.jpg?text=Duży+Obraz+Artykułu"/>
-<p class="image-caption">Ilustrowany Kuryer Codzienny, zdjęcia złodziei znakujących domy swoim szyfrem: dwa czworoboki zachodzące na siebie oznaczały 'nie okradać tego mieszkania</p>
-<div class="article-body">
-<p style="">Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP. Książka wciąga czytelnika w świat mafii, wymuszeń i nielegalnych praktyk. Niezwykle cenne jest dostrzeganie takich problemów, które – choć zakorzenione w historii – wciąż mogą przybierać współczesne formy. Pisząc o takich tematach, warto mieć na uwadze, że „technologie mafijne”, tak świetnie opisane w książce, mogą być wykorzystywane we współczesnej praktyce przez obywateli, których uczciwość pozostaje wątpliwa. Nawet jeśli takim obywatelem jest prezes gdyńskiego NGO 'O', świadczącego usługi nieodpłatnego poradnictwa prawnego.</p>
-<p>Obawiam się, że nie jestem jedynym, kto z zachwytem przeczytał tę książkę. Istnieje wysokie prawdopodobieństwo, że również prezes wspomnianego NGO odczytał ją z notatnikiem i ołówkiem w ręku, mrucząc pod nosem: „Hm... OK.” Nie mam na to dowodów, ale nie wykluczam, że kupowaliśmy ją w tym samym Empiku przy ul. Świętojańskiej w Gdyni. Jak śpiewał Klenczon w „Porcie”: „Mały jest ten świat.” Autorka książki, pan prezes i ja – wszyscy mieszkamy w tym samym porcie, w tym samym, małym świecie.</p>
-<p>Bruderferajn – działalność nielegalna, ale składki dobrowolne.
+                <h1 class="article-title" style="">Bruderferajna Wileńska – Gdyńskie NGO 'O'. Kazus prawno-historyczny</h1>
+                <p class="lead" style="">Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP</p>
+                <p class="author-date">Michael Marmanidi | Data publikacji: 26 lipca 2025</p>
+                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/QtFL7yXn/bruderferan-online.jpg?text=Duży+Obraz+Artykułu"/>
+                <p class="image-caption">Ilustrowany Kuryer Codzienny, zdjęcia złodziei znakujących domy swoim szyfrem: dwa czworoboki zachodzące na siebie oznaczały 'nie okradać tego mieszkania</p>
+                <div class="article-body">
+                    <p style="">Na wstępie chciałbym serdecznie podziękować autorce książki Bruderferajn za wnikliwą analizę jednego z najbardziej mrocznych rozdziałów historii II RP. Książka wciąga czytelnika w świat mafii, wymuszeń i nielegalnych praktyk. Niezwykle cenne jest dostrzeganie takich problemów, które – choć zakorzenione w historii – wciąż mogą przybierać współczesne formy. Pisząc o takich tematach, warto mieć na uwadze, że „technologie mafijne”, tak świetnie opisane w książce, mogą być wykorzystywane we współczesnej praktyce przez obywateli, których uczciwość pozostaje wątpliwa. Nawet jeśli takim obywatelem jest prezes gdyńskiego NGO 'O', świadczącego usługi nieodpłatnego poradnictwa prawnego.</p>
+                    <p>Obawiam się, że nie jestem jedynym, kto z zachwytem przeczytał tę książkę. Istnieje wysokie prawdopodobieństwo, że również prezes wspomnianego NGO odczytał ją z notatnikiem i ołówkiem w ręku, mrucząc pod nosem: „Hm... OK.” Nie mam na to dowodów, ale nie wykluczam, że kupowaliśmy ją w tym samym Empiku przy ul. Świętojańskiej w Gdyni. Jak śpiewał Klenczon w „Porcie”: „Mały jest ten świat.” Autorka książki, pan prezes i ja – wszyscy mieszkamy w tym samym porcie, w tym samym, małym świecie.</p>
+                    <p>Bruderferajn – działalność nielegalna, ale składki dobrowolne.
 Bruderferajn funkcjonował w realiach działalności przestępczej. Naruszał przepisy Kodeksu Karnego II RP, m.in.:
 -Art. 210 KK II RP (wymuszenia): „Kto przemocą lub groźbą bezprawną zmusza drugiego człowieka do czynu, który miałby dla niego skutki prawne, podlega karze.”
 -Art. 282 KK II RP (oszustwa): „Kto przez oszustwo wprowadza drugiego człowieka w błąd co do okoliczności mających znaczenie prawne, w celu osiągnięcia korzyści majątkowej lub innej, podlega karze.”
 -Art. 277 KK II RP (organizacja przestępcza): „Kto przynależy do organizacji przestępczej, podlega karze.”
 Jednak warto zaznaczyć, że w Bruderferajnie składki były dobrowolne, a ich celem była wzajemna pomoc członków w razie wypadków przy pracy, tymczasowego pobytu w więzieniu czy niespodziewanego końca kariery zawodowej. Składki miały funkcję quasi-ubezpieczeniową, nie były wymuszone.
 Można, co prawda, postawić zarzut z art. 283 KK II RP (nielegalna zbiórka publiczna), gdyby składki były pobierane na cele inne niż deklarowane. Ale w praktyce miały one charakter samopomocy – nie publicznej zbiórki. </p>
-<p>Gdyńskie NGO 'O' – legalna forma, nielegalne praktyki.
+                    <p>Gdyńskie NGO 'O' – legalna forma, nielegalne praktyki.
 Współczesne organizacje pozarządowe, takie jak gdyńskie NGO 'O', działają na podstawie obowiązującego prawa – m.in. ustawy o stowarzyszeniach i ustawy o działalności pożytku publicznego. Składki członkowskie w takich organizacjach powinny być dobrowolne.
 W omawianym przypadku sytuacja wygląda inaczej. Składki nie były dobrowolne – pracownicy byli zmuszani do ich uiszczania pod groźbą utraty pracy. Działo się to mimo realizacji projektów finansowanych z budżetu państwa (część będąca w dyspozycji wojewody), środków MSWiA i UNHCR. Wymuszanie składek w takiej sytuacji jest nielegalne i stanowi ekonomiczne wymuszenie.
 Oto odpowiednie przepisy Kodeksu Karnego III RP:
 -Art. 282 KK (wymuszenie rozbójnicze): „Kto przemocą lub groźbą bezprawną zmusza drugiego człowieka do czynu, podlega karze.”
 -Art. 286 KK (oszustwo): „Kto przez wprowadzenie w błąd w celu osiągnięcia korzyści majątkowej doprowadza inną osobę do niekorzystnego rozporządzenia mieniem, podlega karze.”</p>
-<p> Porównanie: mafia i NGO.
+                    <p> Porównanie: mafia i NGO.
 •	Bruderferajn: działalność przestępcza, ale składki dobrowolne, z przeznaczeniem na solidarność wewnątrz organizacji.
 •	Gdyńskie NGO 'O': formalnie legalna struktura, ale składki wymuszane na pracownikach pod groźbą utraty zatrudnienia. W dodatku w ramach projektów pomocowych dla cudzoziemców.
 Czyż nie jest to lustrzane odwrócenie moralności i prawa?</p>
-</div>
-<div class="article-actions">
-<p><a href="#">[ Read on one page ]</a></p>
-<p><a href="#">[ Next article ]</a></p>
-<p><a href="#">[ Comment ]</a></p>
-<p><a href="#">[ Share ]</a></p>
-<p><a href="#">[ Copy link ]</a></p>
-<p><a href="#">[ Print PDF ]</a></p>
-</div>
-<div class="section-separator"></div>
-<div class="editorial-info">
-<p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
-</div>
-</div>
-<div class="vertical-strip"></div>
-<aside class="sidebar kontener-szary desktop-sidebar">
-<div class="clock-calendar-row">
-<iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+                </div>
+                <div class="article-actions">
+                    <p><a href="#">[ Read on one page ]</a></p>
+                    <p><a href="#">[ Next article ]</a></p>
+                    <p><a href="#">[ Comment ]</a></p>
+                    <p><a href="#">[ Share ]</a></p>
+                    <p><a href="#">[ Copy link ]</a></p>
+                    <p><a href="#">[ Print PDF ]</a></p>
+                </div>
+                <div class="section-separator"></div>
+                <div class="editorial-info">
+                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
+                </div>
+            </div>
+            <div class="vertical-strip"></div>
+            <aside class="sidebar kontener-szary desktop-sidebar">
+                <div class="clock-calendar-row">
+                    <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
 </iframe>
-<iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+                    <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
 </iframe>
-</div>
-<iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
-<div class="support-newsletter-section">
-<iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+                </div>
+                <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+                <div class="support-newsletter-section">
+                    <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
 </iframe>
-</div>
-<div class="ads google sidebar-bottom-ad">
-<p>Reklama Google (na dole sidebara)</p>
-</div>
-</aside>
-</div>
-<div class="mobile-bottom-gadgets-container">
-<iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
-<div class="support-newsletter-section">
-<iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+                </div>
+                <div class="ads google sidebar-bottom-ad">
+                    <p>Reklama Google (na dole sidebara)</p>
+                </div>
+            </aside>
+        </div>
+        <div class="mobile-bottom-gadgets-container">
+            <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+            <div class="support-newsletter-section">
+                <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
 </iframe>
-</div>
-<div class="ads google sidebar-bottom-ad">
-<p>Reklama Google (na dole sidebara)</p>
-</div>
-</div>
-<footer>
+            </div>
+            <div class="ads google sidebar-bottom-ad">
+                <p>Reklama Google (na dole sidebara)</p>
+            </div>
+        </div>
+        <footer>
 </footer>
-<script>
+        <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
     const menu   = document.getElementById('offcanvas-menu');
@@ -163,5 +176,5 @@ Czyż nie jest to lustrzane odwrócenie moralności i prawa?</p>
 
     // Weather Widget Script - REMOVED AS IT'S NOW IN wetter.html
   </script>
-</body>
+    </body>
 </html>
