--- a/de/pixel.html
+++ b/de/pixel.html
@@ -59,6 +59,10 @@
 </li>
 <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
 </li>
+<li><a href="lm.html">LUMEN MUNDI</a></li>
+<li><a href="west.html">Z ZACHODU</a></li>
+<li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
+<li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
 </ul>
 </div>
 <div class="mobile-top-gadgets-container">
@@ -82,7 +86,7 @@
 Zanim radio zagościło w naszych domach, było ideą, iskrą w umysłach wizjonerów – Tesli, Marconiego. Ich eksperymenty, niosące dźwięk bez kabli na coraz większe odległości, zwiastowały erę, w której informacja i muzyka miały stać się dostępne dla każdego. Radioodbiorniki, te drewniane, piękne bryły, często z zielonym okiem magicznym, wypełniały domy, stając się nie tylko źródłem wiadomości z kraju i ze świata, ale i świadkiem rodzinnych historii. Wokół nich gromadzono się, słuchano ważnych przemówień, relacji sportowych, a potem – Jazzu, big-beatu. </p>
 <p style="">W powojennej Europie, w szarej rzeczywistości zniszczeń i niedostatku, pojawiła się potrzeba czegoś, co przyniesie odrobinę normalności, a może nawet radości. W Norymberdze, w 1945 roku, Max Grundig – człowiek o wizji i smykałce do elektroniki – dał światu "Heinzelmanna". To była więcej niż tylko radiowa skrzynka; to był zestaw do samodzielnego montażu, sprytny sposób na ominięcie powojennych restrykcji, symbol pomysłowości i zaradności. Grundig, z pasją do radia, stał się gigantem elektroniki, a jego nazwisko synonimem solidności i innowacji. Pamiętamy czasy, gdy Grundig był obecny w każdym szanującym się polskim domu, a jego magnetofony czy telewizory były oknem na świat. I choć firma przeszła burzliwe dzieje, jej dziedzictwo, to dążenie do jakości i sprytnych rozwiązań, wciąż pobrzmiewa w nowych urządzeniach.</p>
 <p style=""> Szum, Cisza i Nieskończoność: Technologiczny Krajobraz Dźwięku
-Przez dekady królowało radio analogowe – AM i FM. Ten znajomy szum, ta subtelna konieczność "strojenia", szukania właściwej częstotliwości, miały swój urok. Była w tym pewna rytualność, element ludzkiego zaangażowania w proces odbioru. Dźwięk, choć czasem nieidealny, był namacalny, eterem dosłownie "wciąganym" przez antenę.</p>
+Przez dekady królowało radio analogowe – AM i FM. Ten znajomy szum, ta subtelna konieczność "strojenia", szukania właściwej częstotencji, miały swój urok. Była w tym pewna rytualność, element ludzkiego zaangażowania w proces odbioru. Dźwięk, choć czasem nieidealny, był namacalny, eterem dosłownie "wciąganym" przez antenę.</p>
 <p style="">Potem nadeszła cyfrowa rewolucja. DAB (Digital Audio Broadcasting), a szczególnie jego nowsza inkarnacja, DAB+, obiecały coś więcej: krystaliczną czystość dźwięku, brak zakłóceń, stabilność. To jak przejście z obrazu malowanego ręcznie na perfekcyjny piksel. Nagła, absolutna cisza w tle, a potem czysty głos, bez trzasków i zniekształceń. I do tego mnogość stacji, których nazwy pojawiały się na małych wyświetlaczach, nie wymagając od nas ani krzty wysiłku w szukaniu.
 Lecz to, co naprawdę otworzyło bramy nieskończoności, to radio internetowe. Jeśli DAB+ uwolnił nas od szumów, to Internet Radio uwolniło nas od zasięgu. Nagle, za sprawą Wi-Fi, świat dosłownie wszedł do naszego salonu. Dziesiątki tysięcy stacji z każdego zakątka globu, gatunki muzyczne, o których istnieniu nie mieliśmy pojęcia, audycje, podcasty, rozmowy – wszystko dostępne na wyciągnięcie ręki, wystarczy stabilne połączenie z siecią. To zmiana paradygmatu: od lokalnego odbiornika do globalnego okna na dźwięk.</p>
 <p style=""> Grundig DTR6000.OAK: Gdzie Przeszłość Spotyka Teraźniejszość
