--- a/de/kartka.html
+++ b/de/kartka.html
@@ -21,23 +21,23 @@
                 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </svg>
-            </button>             <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
+            </button>             <a class="header-link" href="index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
         </header>
         <nav class="main-nav">
             <ul>
-                <li> <a href="stand.html" style="font-weight: wght@400; font-style: normal; ">STANDPUNKT</a>
+                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a>
                 </li>
-                <li> <a href="prawo.html" style="">PRAWO</a>
+                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a>
                 </li>
-                <li> <a href="lokalnie.html" style="">LOKALNIE</a>
+                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a>
                 </li>
-                <li> <a href="dobrze.html" style="">DOBRZE NA DZIŚ</a>
+                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a>
                 </li>
-                <li> <a href="notpl.html" style="">OBYWATELE NIE PL</a>
+                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a>
                 </li>
-                <li> <a href="kartka.html" style="">KARTKA Z HISTORII</a>
+                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html" style="">DANZIGER CHRONOGRAF</a>
+                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a>
                 </li>
             </ul>
         </nav>
@@ -56,8 +56,11 @@
                 </li>
                 <li> <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
-                </li>
+                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a></li>
+                <li><a href="lm.html">LUMEN MUNDI</a></li>
+                <li><a href="west.html">Z ZACHODU</a></li>
+                <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
+                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
             </ul>
         </div>
         <div class="mobile-top-gadgets-container">
@@ -70,21 +73,16 @@
             <div class="main-content">
                 <div class="ads google article-top-ad">
 </div>
-                <h1 class="article-title" style="">Jak powstało Trójmiasto.</h1>
-                <p class="lead" style="">Jak narodziła się idea Trójmiasta ?</p>
+                <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Jak powstało Trójmiasto.</h1>
+                <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">Jak narodziła się idea Trójmiasta ? Pomysł połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia.</p>
                 <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
-                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/PrC5zSqZ/3city-online.jpg"/>
+                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/PrC5zSqZ/3city-online.jpg?text=Duży+Obraz+Artykułu"/>
                 <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p>
                 <div class="article-body">
-                    <p style="">Jak narodziła się idea Trójmiasta ?  Pomysł  połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska. Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.</p>
-                    <p>W 1950 roku powołano Związek Miast Bałtyckich, który miał koordynować rozwój gospodarczy i kulturalny regionu. W ramach tego związku, Gdańsk, Gdynia i Sopot zaczęły wspólnie planować inwestycje, rozwijać infrastrukturę i promować się jako spójny obszar turystyczny. Powstały wspólne plany zagospodarowania przestrzennego, rozwijano sieć komunikacji miejskiej, a także organizowano wspólne imprezy kulturalne i sportowe.</p>
-                    <p>Idea Trójmiasta była odpowiedzią na potrzeby dynamicznego rozwoju regionu oraz na dążenie do efektywniejszego zarządzania jego zasobami. Dzięki współpracy, miasta mogły lepiej wykorzystywać swoje potencjały, unikać dublowania inwestycji i tworzyć spójną ofertę dla mieszkańców i turystów. To doprowadziło do powstania unikalnej metropolii, która stała się symbolem powojennego odrodzenia i integracji</p>
-                    <p>.Wspólna polityka Trójmiasta pozwoliła nie tylko na rozwój kultury, ale przede wszystkim na zintegrowanie transportu i logistyki. Już w latach 60. rozpoczęto budowę układu drogowego łączącego Gdańsk, Sopot i Gdynię — dzisiejszej Drogi Zielonej i Trasy Kwiatkowskiego. System SKM (Szybka Kolej Miejska) stał się kręgosłupem komunikacji aglomeracyjnej, umożliwiając szybki dojazd między dzielnicami i miastami. Do dziś stanowi on przykład efektywnego systemu transportu publicznego.
-Trójmiasto jako centrum edukacyjne i technologiczne
-Oprócz rozwoju urbanistycznego, region postawił na naukę i nowoczesność. Powstały uczelnie o znaczeniu krajowym i międzynarodowym: Politechnika Gdańska, Uniwersytet Gdański czy Akademia Morska w Gdyni. Dzięki współpracy akademickiej z przemysłem morskim i nowoczesnymi technologiami, Trójmiasto zaczęło przyciągać inwestycje z sektora IT, finansów i logistyki.
-Idea Trójmiasta była odpowiedzią na potrzeby dynamicznego rozwoju regionu oraz na dążenie do efektywniejszego zarządzania jego zasobami. Dzięki współpracy, miasta mogły lepiej wykorzystywać swoje potencjały, unikać dublowania inwestycji i tworzyć spójną ofertę dla mieszkańców i turystów. To doprowadziło do powstania unikalnej metropolii, która stała się symbolem powojennego odrodzenia i integracji. turystycznej. </p>
-                    <p>Trójmiasto regularnie pojawia się w zestawieniach najlepszych miejsc do życia i odwiedzin w Europie Środkowo-Wschodniej. Wspólna oferta kulturalna, nadmorski charakter, dostęp do plaż i lasów, a także dziedzictwo historyczne i nowoczesna gastronomia sprawiają, że region przyciąga nie tylko turystów, ale też inwestorów i nowych mieszkańców.
-Jeśli planujesz podróż do Trójmiasta &ndash; sprawdź dostępne noclegi i propozycje zwiedzania online.</p>
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Jak narodziła się idea Trójmiasta ? Pomysł połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjnego scalenia Gdyni Sopotu i Gdańska. Jednak już wcześniej w czasie wojny miasta funkcjonowały jako wspólny organizm. Niemieckie władze zarządzały portami w Gdyni i Gdańsku jako jednym systemem a komunikacja publiczna była koordynowana na całym obszarze.</p>
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">A po wojnie? Powojenny chaos i potrzeba szybkiej odbudowy wymusiły pragmatyzm. Władze komunistyczne dostrzegły potencjał w synergii trzech miast. W 1950 roku powołano Związek Miast Nadmorskich &ndash; nieformalne ciało koordynujące rozwój. Ale prawdziwa integracja zaczęła się na poziomie infrastruktury: wspólne plany zagospodarowania przestrzennego, rozbudowa sieci komunikacyjnej (głównie kolejowej SKM), centralne zarządzanie portami i przemysłem.</p>
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">W latach 60. i 70. budowano wspólne osiedla (np. Przymorze), planowano połączenia drogowe (Obwodnica Trójmiasta) i rozwijało się szkolnictwo wyższe (Uniwersytet Gdański). Pojęcie &bdquo;Trójmiasto&rdquo; weszło do języka potocznego, a potem do nomenklatury administracyjnej. Było to połączenie przymusowe, ale i racjonalne &ndash; żadne z miast nie mogło rozwijać się w izolacji tak efektywnie.</p>
+                    <p style="font-family: 'Merriweather', serif; font-size: 16px;">Dziś? Mimo formalnej odrębności, Trójmiasto funkcjonuje jako jedna metropolia. Wspólne lotnisko, komunikacja publiczna, rynek pracy, uczelnie. Istnieją plany utworzenia metropolitalnego związku, który mógłby scalić zarządzanie. Ale historia pokazuje, że idea Trójmiasta to nie tylko dekret &ndash; to wynik naturalnej synergii i wspólnych potrzeb.</p>
                 </div>
                 <div class="article-actions">
                     <p><a href="#">[ Read on one page ]</a></p>
@@ -149,6 +147,8 @@ Jeśli planujesz podróż do Trójmiasta &ndash; sprawdź dostępne noclegi i pr
     if (overlay) {
       overlay.addEventListener('click', toggleMenu);
     }
+
+    // Weather Widget Script - REMOVED AS IT'S NOW IN wetter.html
   </script>
     </body>
 </html>
