--- a/dobrze.html
+++ b/dobrze.html
@@ -56,8 +56,11 @@
                 </li>
                 <li> <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
-                </li>
+                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a></li>
+                <li><a href="lm.html">LUMEN MUNDI</a></li>
+                <li><a href="west.html">Z ZACHODU</a></li>
+                <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
+                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
             </ul>
         </div>
         <div class="mobile-top-gadgets-container">
