--- a/prawo.html
+++ b/prawo.html
@@ -72,6 +72,10 @@
                 <li>
                     <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
+                <li><a href="lm.html">LUMEN MUNDI</a></li>
+                <li><a href="west.html">Z ZACHODU</a></li>
+                <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
+                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
             </ul>
         </div>
         <div class="mobile-top-gadgets-container">
