--- a/fin.html
+++ b/fin.html
@@ -144,14 +144,15 @@ Ale żyjemy w czasach, w których każda forma niezależności będzie coraz bar
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">&nbsp;&nbsp;Złoto to pieniądz wolnych ludzi. Ale wolność &ndash; jak zawsze &ndash; wymaga wiedzy.
 Nie bój się złota. Po prostu zrozum, jak działa.</p> 
                 </div>                 
-                <div class="article-actions"> 
-                    <p><a href="#">[ Read on one page ]</a></p> 
-                    <p><a href="#">[ Next article ]</a></p> 
-                    <p><a href="#">[ Comment ]</a></p> 
-                    <p><a href="#">[ Share ]</a></p> 
-                    <p><a href="#">[ Copy link ]</a></p> 
-                    <p><a href="#">[ Print PDF ]</a></p> 
-                </div>                 
+                
+<div class="article-actions">
+    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
+    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
+    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
+    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
+    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
+</div>
+                 
                 <div class="section-separator"></div>                 
                 <div class="editorial-info"> 
                     <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a href="kontakt.html" class="contact-btn">Skontaktuj się z nami</a> 
