--- a/lm.html
+++ b/lm.html
@@ -89,14 +89,15 @@ Ustanowienie Diecezji Gdańskiej 30 grudnia 1925 roku bullą papieża Piusa XI &
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">Biskup Edward O&apos;Rourke zmarł w Rzymie 27 czerwca 1943 roku. W 1972 roku jego szczątki zostały sprowadzone do Gdańska i pochowane w krypcie biskupów w Katedrze Oliwskiej. Dziś, Edward O&apos;Rourke jest uznawany za jedną z postaci, która z odwagą sprzeciwiała się totalitaryzmom, a jego pamięć jest pielęgnowana w Polsce. Na jego cześć plac w Gdańsku-Wrzeszczu nosi jego imię od 1989 roku.</p>
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">Ciąg dalszy w kolejnych &quot;Lumen Mundi&quot;: W następnych artykułach będziemy kontynuować opowieść o stuleciu Archidiecezji Gdańskiej, przechodząc przez mroczne czasy II wojny światowej, lata komunizmu i odrodzenia w wolnej Polsce, aż po współczesne wyzwania i osiągnięcia. Zapraszamy do lektury!</p>
                 </div>
-                <div class="article-actions">
-                    <p><a href="#">[ Read on one page ]</a></p>
-                    <p><a href="#">[ Next article ]</a></p>
-                    <p><a href="#">[ Comment ]</a></p>
-                    <p><a href="#">[ Share ]</a></p>
-                    <p><a href="#">[ Copy link ]</a></p>
-                    <p><a href="#">[ Print PDF ]</a></p>
-                </div>
+                
+<div class="article-actions">
+    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
+    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
+    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
+    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
+    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
+</div>
+
                 <div class="section-separator"></div>
                 <div class="editorial-info">
                     <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
