--- a/pixel.html
+++ b/pixel.html
@@ -100,14 +100,15 @@ To nie jest tylko odtwarzacz dźwięku; to most między wczoraj a dziś. Pozwala
 <p style=""> Dla kogo Jemma Siecińska Sprawdziła ten Eter Zmieniający Postać?
 To radio jest dla tych, którzy pamiętają czasy tranzystorów, a jednocześnie z otwartymi ramionami witają cyfrową erę. Dla tych, którzy w dźwięku szukają nie tylko informacji, ale i ukojenia, inspiracji, podróży w czasie i przestrzeni. DTR6000.OAK to więcej niż sprzęt; to towarzysz, który pozwala nam odnaleźć się w zmieniającym się świecie, przypominając o korzeniach i otwierając na to, co nowe. Stoi na przecięciu tradycji i przyszłości, niczym Gdański Kronograf, który z namysłem spogląda w przeszłość, by lepiej zrozumieć teraźniejszość.</p>
 </div>
+
 <div class="article-actions">
-<p><a href="#">[ Read on one page ]</a></p>
-<p><a href="#">[ Next article ]</a></p>
-<p><a href="#">[ Comment ]</a></p>
-<p><a href="#">[ Share ]</a></p>
-<p><a href="#">[ Copy link ]</a></p>
-<p><a href="#">[ Print PDF ]</a></p>
+    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
+    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
+    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
+    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
+    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
 </div>
+
 <div class="section-separator"></div>
 <div class="editorial-info">
 <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
