--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -86,14 +86,15 @@
 Die Niederstadt war anders. Wo heute Stille herrscht, tobte einst das Leben. Wo jetzt Feuchtigkeit glitzert, wogten Menschenmassen. Wandel kam nicht als Befehl, sondern schlich heran. Niemand rief „Sanierung“, denn kaum jemand fragte nach Notwendigkeit. Mauern bekleideten sich neu, Gassen empfingen frische Wanderer. Alte Wände schwieg’n, als sei längst alles gesagt.
 Am Abend ergießt sich Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt nicht w der Vergangenheit, er trägt sie fort. Er steht nie still, obwohl er gedenkt i ahnt. Genau dlatego lohnt es sich einzusteigen – um Danzig anders zu sehen, nie verpostkartet, sondern w jener Präsenz, die man na der Haut spürt. </p>
 </div>
+
 <div class="article-actions">
-<p><a href="#">[ Read on one page ]</a></p>
-<p><a href="#">[ Next article ]</a></p>
-<p><a href="#">[ Comment ]</a></p>
-<p><a href="#">[ Share ]</a></p>
-<p><a href="#">[ Copy link ]</a></p>
-<p><a href="#">[ Print PDF ]</a></p>
+    <a href="../index.html" role="button" style="font-weight: 400;">Start page</a>
+    <a href="../comments.html" role="button" style="font-weight: 400;">Comment</a>
+    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
+    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
+    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
 </div>
+
 <div class="section-separator"></div>
 <div class="editorial-info">
 <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
