--- a/kartka.html
+++ b/kartka.html
@@ -84,14 +84,15 @@
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">W latach 60. i 70. budowano wspólne osiedla (np. Przymorze), planowano połączenia drogowe (Obwodnica Trójmiasta) i rozwijało się szkolnictwo wyższe (Uniwersytet Gdański). Pojęcie &bdquo;Trójmiasto&rdquo; weszło do języka potocznego, a potem do nomenklatury administracyjnej. Było to połączenie przymusowe, ale i racjonalne &ndash; żadne z miast nie mogło rozwijać się w izolacji tak efektywnie.</p>
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">Dziś? Mimo formalnej odrębności, Trójmiasto funkcjonuje jako jedna metropolia. Wspólne lotnisko, komunikacja publiczna, rynek pracy, uczelnie. Istnieją plany utworzenia metropolitalnego związku, który mógłby scalić zarządzanie. Ale historia pokazuje, że idea Trójmiasta to nie tylko dekret &ndash; to wynik naturalnej synergii i wspólnych potrzeb.</p>
                 </div>
-                <div class="article-actions">
-                    <p><a href="#">[ Read on one page ]</a></p>
-                    <p><a href="#">[ Next article ]</a></p>
-                    <p><a href="#">[ Comment ]</a></p>
-                    <p><a href="#">[ Share ]</a></p>
-                    <p><a href="#">[ Copy link ]</a></p>
-                    <p><a href="#">[ Print PDF ]</a></p>
-                </div>
+                
+<div class="article-actions">
+    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
+    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
+    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
+    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
+    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
+</div>
+
                 <div class="section-separator"></div>
                 <div class="editorial-info">
                     <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
