--- a/lokalnie.html
+++ b/lokalnie.html
@@ -99,14 +99,15 @@ Letnie kino plenerowe to jeden z najciekawszych sposobów na wieczór w Sopocie 
 Jeśli szukasz innych pomysłów na relaks – sprawdź także naszą propozycję jednodniowej trasy kaszubskiej w dziale „Dobrze na dziś”.
 Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopotu – apartamenty z widokiem na morze dostępne już od 180 zł za noc.</p>
                 </div>
-                <div class="article-actions">
-                    <p><a href="#">[ Read on one page ]</a></p>
-                    <p><a href="#">[ Next article ]</a></p>
-                    <p><a href="#">[ Comment ]</a></p>
-                    <p><a href="#">[ Share ]</a></p>
-                    <p><a href="#">[ Copy link ]</a></p>
-                    <p><a href="#">[ Print PDF ]</a></p>
-                </div>
+                
+<div class="article-actions">
+    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
+    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
+    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
+    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
+    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
+</div>
+
                 <div class="section-separator"></div>
                 <div class="editorial-info">
                     <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
