--- a/west.html
+++ b/west.html
@@ -118,14 +118,15 @@ https://www.faz.net/aktuell/politik/inland/polen-rechtsextreme-buergerwehren-wol
 [6] „Pogranicze w ogniu”, odc. 13 i 15, TVP 1989–1991
 [7] Reile, Oskar: Geheime Ostfront, Berlin 1965 </p>
                 </div>
-                <div class="article-actions">
-                    <p><a href="#">[ Read on one page ]</a></p>
-                    <p><a href="#">[ Next article ]</a></p>
-                    <p><a href="#">[ Comment ]</a></p>
-                    <p><a href="#">[ Share ]</a></p>
-                    <p><a href="#">[ Copy link ]</a></p>
-                    <p><a href="#">[ Print PDF ]</a></p>
-                </div>
+                
+<div class="article-actions">
+    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
+    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
+    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
+    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
+    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
+</div>
+
                 <div class="section-separator"></div>
                 <div class="editorial-info">
                     <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
