--- a/support.html
+++ b/support.html
@@ -91,7 +91,7 @@
 <body>
     <div class="support-widget">
         <a href="support.html" class="vista-button btn-blue">📰 Support free press</a>
-        <a href="mailto:redakcja@danziger.org?subject=Subskrypcja" class="vista-button btn-red">✉️ Subscribe</a>
+        <a href="subscribe.html" class="vista-button btn-red">✉️ Subscribe</a>
         <a href="archiwum.html" class="vista-button btn-grey">📁 Archive</a>
     </div>
 
